Photocard Clicked z-index fix

--- a/src/components/PhotoCard/_PhotoCard.scss
+++ b/src/components/PhotoCard/_PhotoCard.scss
@@ -184,7 +184,7 @@ $white: #ffffff;
     border: none;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 99999;
 
     img {
       border-radius: 0px !important;
